# movie-chatbot

./: .gitignore  README.md  pyproject.toml
data/eval/: movies_data_qa.json  movies_qa.json
src/chatbot/: chatbot.py  chatbot_eval.py  clean_data.py  clean_data_explore.ipynb  data.py  index_data.py  parse_data.py  prompts.py  retriever.py
src/data/: clean_data.py  eval_data.py  parse_data.py
