[tool.poetry]
name = "movie-chatbot"
version = "0.1.0"
description = ""
authors = ["Tamara Makarova <toma.makarova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
pandas = "^2.2.2"
openai = "^1.25.1"
scipy = "^1.13.0"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.23"
langserve = "^0.2.3"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sse-starlette = "^2.1.3"
langchain = "^0.2.16"
langchain-chroma = "^0.1.3"
langchain-community = "^0.2.16"
python-multipart = "^0.0.9"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
polars = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
